RESOLVED FIXED312601
AX: TimeoutSafeSemaphore should use ThreadSafeRefCounted since it is shared across threads
https://bugs.webkit.org/show_bug.cgi?id=312601
Summary AX: TimeoutSafeSemaphore should use ThreadSafeRefCounted since it is shared a...
Tyler Wilcock
Reported 2026-04-17 13:34:13 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-17 13:34:19 PDT
Tyler Wilcock
Comment 2 2026-04-17 13:37:37 PDT
Tyler Wilcock
Comment 3 2026-04-17 14:38:25 PDT
EWS
Comment 4 2026-04-18 11:24:03 PDT
Committed 311533@main (c9366c348f0c): <https://commits.webkit.org/311533@main> Reviewed commits have been landed. Closing PR #63002 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.